--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
   <script src="src/models/video.js"></script>
   <script src="src/collections/videos.js"></script>
   <script src="src/lib/templateUrl.js"></script>
+  <script src="src/data/exampleVideoData.js"></script>
 
-  <script src="src/views/app.js"></script>
-  <script src="src/views/search.js"></script>
-  <script src="src/views/videoList.js"></script>
   <script src="src/views/videoListEntry.js"></script>
+  <script src="src/views/videoList.js"></script>
   <script src="src/views/videoPlayer.js"></script>
+  <script src="src/views/search.js"></script>
+  <script src="src/views/app.js"></script>
 
   <script>
     backboneReady(() => {
