--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
   <script src="src/models/video.js"></script>
+  <script src="src/config/youtube.js"></script>
   <script src="src/collections/videos.js"></script>
   <script src="src/lib/templateUrl.js"></script>
   <script src="src/data/exampleVideoData.js"></script>
